--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PortFolio | Site</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <style></style>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <h2 class="nav-title">Ma<span>r</span>y</h2>
+        <ul>
+          <li><a href="">PortFolio</a></li>
+          <li><a href="">Blog</a></li>
+          <li>
+            <a href=""><button class="btn-primary">Hire me</button></a>
+          </li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner-content">
+          <h3>Hi, I am</h3>
+          <h1>Mary Hardy</h1>
+          <p>
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <div class="banner-button">
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contact</button>
+          </div>
+        </div>
+        <div class="banner-profile-pic">
+          <img src="/images/hardy.png" alt="banner profile" />
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
