--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
     <style></style>
   </head>
   <body>
+    <!-- header section start -->
     <header>
       <nav>
         <h2 class="nav-title">Ma<span>r</span>y</h2>
@@ -37,5 +38,86 @@
         </div>
       </div>
     </header>
+    <!-- main section start -->
+
+    <main>
+      <section class="about">
+        <h3 class="h3-title">About Me</h3>
+        <p>
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <div class="about-items">
+          <div class="item">
+            <p>Name:</p>
+            <h5>Mary Hardy</h5>
+          </div>
+          <div class="item">
+            <p>Email:</p>
+            <h5>info@gmail.com</h5>
+          </div>
+          <div class="item">
+            <p>Date of birth:</p>
+            <h5>11 November 1987</h5>
+          </div>
+          <div class="item">
+            <p>formerly</p>
+            <h5>Los Angeles, USA</h5>
+          </div>
+        </div>
+      </section>
+      <!-- about section end -->
+
+      <section class="technical-skill">
+        <h3 class="h3-title">What I do?</h3>
+        <p>
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="all-skills">
+          <div class="skill">
+            <img src="/images/icons/js.png" alt="javascript logo" />
+            <h4 class="skill-title">Vanila javascript</h4>
+            <p>
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="/images/icons/react.png" alt="React js" />
+            <h4 class="skill-title">React js</h4>
+            <p>
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/nodejs.png" alt="Node js" />
+            <h4 class="skill-title">Node js</h4>
+            <p>
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/mongo.png" alt="mongo db" />
+            <h4 class="skill-title">MongoDB</h4>
+            <p>
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
