I have added resume, contact form and technical skill in this portfolio with beautiful  css style

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font awesome cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>PortFolio | Site</title>
     <link rel="stylesheet" href="styles/style.css" />
     <style></style>
@@ -29,8 +37,12 @@
             he. Morning because as to society behaved moments.
           </p>
           <div class="banner-button">
-            <button class="btn-primary">Download CV</button>
-            <button class="btn-primary">Contact</button>
+            <button class="btn-primary">
+              <i class="fa-solid fa-download"></i>Download CV
+            </button>
+            <button class="btn-primary">
+              <i class="fa-solid fa-phone"></i>Contact
+            </button>
           </div>
         </div>
         <div class="banner-profile-pic">
@@ -118,6 +130,106 @@
           </div>
         </div>
       </section>
+      <!-- technical section end -->
+
+      <section class="resume-section">
+        <h3 class="h3-title">A Summery of My Resume</h3>
+        <div class="resume">
+          <div class="educations">
+            <h3 class="resume-title">My Education</h3>
+            <div class="education">
+              <h4>Master in Computer Engineering</h4>
+              <h5>Harvard University / 2015 - 2017</h5>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="education">
+              <h4>Master in Computer Engineering</h4>
+              <h5>Harvard University / 2015 - 2017</h5>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="education">
+              <h4>Master in Computer Engineering</h4>
+              <h5>Harvard University / 2015 - 2017</h5>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <!-- educations end -->
+
+          <div class="experiences">
+            <h3 class="resume-title">My Experience</h3>
+            <div class="experience">
+              <h4>Master in Computer Engineering</h4>
+              <h5>Harvard University / 2015 - 2017</h5>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="experience">
+              <h4>Master in Computer Engineering</h4>
+              <h5>Harvard University / 2015 - 2017</h5>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="experience">
+              <h4>Master in Computer Engineering</h4>
+              <h5>Harvard University / 2015 - 2017</h5>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <!-- experience end -->
+        </div>
+        <div>
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i>Download CV
+          </button>
+        </div>
+      </section>
+      <!-- resume section end -->
     </main>
+    <footer>
+      <section class="contact-form">
+        <div class="contact">
+          <h3>Let's Connect</h3>
+          <p>
+            Please fill out the form on this section to contact with me or call
+            between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
+          <img src="images/icons/facebook.png" alt="facebook" />
+          <img src="images/icons/twitter.png" alt="twitter" />
+          <img src="images/icons/insta.png" alt="instagram" />
+        </div>
+
+        <form action="">
+          <h3>Let's Message me</h3>
+          <input type="text" placeholder="Your name" />
+          <input type="email" placeholder="Your email" />
+          <textarea name="" id="" cols="" placeholder="Message"></textarea>
+          <div>
+            <button class="btn-primary">Submit</button>
+          </div>
+        </form>
+      </section>
+    </footer>
   </body>
 </html>
