I changed the path of all images

--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
         </p>
         <div class="all-skills">
           <div class="skill">
-            <img src="/images/icons/js.png" alt="javascript logo" />
+            <img src="images/icons/js.png" alt="javascript logo" />
             <h4 class="skill-title">Vanila javascript</h4>
             <p>
               List skill/technologies here. You can change the icon above to any
@@ -102,7 +102,7 @@
             </p>
           </div>
           <div class="skill">
-            <img src="/images/icons/react.png" alt="React js" />
+            <img src="images/icons/react.png" alt="React js" />
             <h4 class="skill-title">React js</h4>
             <p>
               List skill/technologies here. You can change the icon above to any
