--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <title>PortFolio | Site</title>
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/portfolio.css" />
     <style></style>
   </head>
   <body>
