finally I completed this project by changing images path

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="banner-profile-pic">
-          <img src="/images/hardy.png" alt="banner profile" />
+          <img src="images/hardy.png" alt="banner profile" />
         </div>
       </div>
     </header>
