--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- header section start -->
-    <header>
+    <header class="hide">
       <nav>
         <h2 class="nav-title">Ma<span>r</span>y</h2>
         <ul>
@@ -53,7 +53,7 @@
     <!-- main section start -->
 
     <main>
-      <section class="about">
+      <section class="about hide">
         <h3 class="h3-title">About Me</h3>
         <p>
           I, m a designer & developer with a passion for web design. I enjoy
@@ -132,7 +132,7 @@
       </section>
       <!-- technical section end -->
 
-      <section class="resume-section">
+      <section class="resume-section hide">
         <h3 class="h3-title">A Summery of My Resume</h3>
         <div class="resume">
           <div class="educations">
@@ -207,7 +207,7 @@
       </section>
       <!-- resume section end -->
     </main>
-    <footer>
+    <footer class="hide">
       <section class="contact-form">
         <div class="contact">
           <h3>Let's Connect</h3>
