I have added mobile responsive style on about and header section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- header section start -->
-    <header class="hide">
+    <header class="">
       <nav>
         <h2 class="nav-title">Ma<span>r</span>y</h2>
         <ul>
@@ -53,7 +53,7 @@
     <!-- main section start -->
 
     <main>
-      <section class="about hide">
+      <section class="about">
         <h3 class="h3-title">About Me</h3>
         <p>
           I, m a designer & developer with a passion for web design. I enjoy
@@ -83,7 +83,7 @@
       </section>
       <!-- about section end -->
 
-      <section class="technical-skill">
+      <section class="technical-skill hide">
         <h3 class="h3-title">What I do?</h3>
         <p>
           I have more than 10 years experience building software for clients all
