I have added mobile responsive style for technical-skill and resume section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </section>
       <!-- about section end -->
 
-      <section class="technical-skill hide">
+      <section class="technical-skill">
         <h3 class="h3-title">What I do?</h3>
         <p>
           I have more than 10 years experience building software for clients all
@@ -132,7 +132,7 @@
       </section>
       <!-- technical section end -->
 
-      <section class="resume-section hide">
+      <section class="resume-section">
         <h3 class="h3-title">A Summery of My Resume</h3>
         <div class="resume">
           <div class="educations">
