finally adding mobile responsive style on footer section, I completed all mobile responsive style for this portfolio project

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       </section>
       <!-- resume section end -->
     </main>
-    <footer class="hide">
+    <footer class="">
       <section class="contact-form">
         <div class="contact">
           <h3>Let's Connect</h3>
